--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,8 @@ jobs:
 
     - name: Run app
       run: python app.py
+
+    - name: Print secret from environment
+      run: echo "Secret is $MY_SECRET"
+      env:
+        MY_SECRET: ${{ secrets.MY_SECRET }}
