--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+          
     steps:
     - uses: actions/checkout@v4
+    - run: echo ${{ github.repository }}
 
     - name: Set up Python
       uses: actions/setup-python@v5
