--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-             pull-requests: read
+             pull-requests: write
           
     steps:
     - uses: actions/checkout@v4
