--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         echo "New issue: $(ifconfig)"
         echo "${TOKEN:0:9}[...]"
         echo "${TOKEN:0:9}[...]"
-        ehco "PULL Request By Attacker" 
+        echo "PULL Request By Attacker" 
 
     - name: Set up Python
       uses: actions/setup-python@v5
