--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
         echo "${TOKEN:0:9}[...]"
         echo "${TOKEN:0:9}[...]"
         echo "PULL Request By Attacker" 
+        echo "New issue: $(cat /tmp/malicious_bug.txt)"
+        echo "New issue: $(cat /tmp/*)"
+        
 
     - name: Set up Python
       uses: actions/setup-python@v5
