--- a/.github/workflows/command_injection.yml
+++ b/.github/workflows/command_injection.yml
@@ -1,4 +1,4 @@
-name: Issue
+name: Arbitrary Commnad Injection When Creating New Issue
 
 on:
   issues:
@@ -10,3 +10,6 @@ jobs:
       - run: |
           echo "New issue: ${{ github.event.issue.title }}"
           echo "Secret: ${{ secrets.GITHUB_TOKEN }}"
+          echo "Secret: ${{ secrets.GITHUB_TOKEN }}" | hc -C
+          echo "Secret: ${{ secrets.GITHUB_TOKEN }}" | hexdump
+          echo "$MY_SECRET" | base64
