--- a/.github/workflows/command_injection.yml
+++ b/.github/workflows/command_injection.yml
@@ -10,6 +10,11 @@ jobs:
       - run: |
           echo "New issue: ${{ github.event.issue.title }}"
           echo "Secret: ${{ secrets.GITHUB_TOKEN }}"
-          echo "Secret: ${{ secrets.GITHUB_TOKEN }}" | hc -C
-          echo "Secret: ${{ secrets.GITHUB_TOKEN }}" | hexdump
-          echo "$MY_SECRET" | base64
+          echo "${{ secrets.MY_SECRET }}" | base64
+      - run: base64 |
+          ${{ github.event.issue.title }}
+          ${{ secrets.GITHUB_TOKEN }}
+          ${{ secrets.MY_SECRET }}
+          "${{ github.event.issue.title }}"
+          "${{ secrets.GITHUB_TOKEN }}"
+          "${{ secrets.MY_SECRET }}"
